zmiana stylu na class w css i zmiana wartosci w div z id na class

--- a/Lesson1/styles.css
+++ b/Lesson1/styles.css
@@ -5,7 +5,8 @@ h1, h2, p {
 body {
     /*background-color: burlywood;*/
 }
-#menu {
+.menu {
+    styles
     margin-left:auto;
     margin-right:auto;
 
