wyrownanie napisu coffi i ceny na lewej i prawej w tej samel lini w css

--- a/Lesson1/styles.css
+++ b/Lesson1/styles.css
@@ -18,8 +18,10 @@ body {
     text-align:left;
 }
 .price {
+    width:49%;
     text-align:right;
 }
 .item p {
+    width:49%;
     display:inline-block;
 }
