--- a/Lesson1/styles.css
+++ b/Lesson1/styles.css
@@ -6,12 +6,11 @@ body {
     background-image:url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg)
 }
 .menu {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     width: 80%;
     background-color: burlywood;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px;
   }
 .flavor, .dessert {
     text-align:left;
