--- a/Lesson1/styles.css
+++ b/Lesson1/styles.css
@@ -3,20 +3,25 @@ h1, h2, p {
     text-align: center;
 }
 body {
+    font-family: sans-serif;
     background-image:url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg)
 }
 .menu {
-    padding-top: 20px;
-    padding-bottom: 20px;
     width: 80%;
-    background-color: burlywood;
-    margin: 20px;
+  background-color: burlywood;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  max-width: 500px;
+  }
+  h1, h2 {
+    font-family: Impact, serif;
   }
 .flavor, .dessert {
     text-align:left;
 }
 .price {
-    width:75%;
+    width:75%; 
     text-align:right;
 }
 .item p {
