--- a/Lesson1/styles.css
+++ b/Lesson1/styles.css
@@ -14,6 +14,15 @@ body {
   padding: 20px;
   max-width: 500px;
   }
+  h1 {
+    font-size: 40px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  .established{
+    font-style:italic
+  }
   h1, h2 {
     font-family: Impact, serif;
   }
