--- a/Lesson1/styles.css
+++ b/Lesson1/styles.css
@@ -72,6 +72,7 @@ a:active {
     margin-bottom: 5px;
 }
 img {
+    margin-top: -25px;
     display: block;
     margin-left: auto;
     margin-right: auto;
